--- a/kibana.yaml
+++ b/kibana.yaml
@@ -5,11 +5,15 @@ metadata:
  name: kibana
  namespace: elk
  labels:
-  app: kibana-frontend
+  app: kibana
 spec:
  containers:
  - name: kibana-frontend
-   image: docker.elastic.co/kibana/kibana:6.8.6
+   image: kibana:6.8.6
+   ports:
+   - containerPort: 5601
+     name: ui
+     protocol: TCP
 
 
 ---
@@ -18,15 +22,14 @@ apiVersion: v1
 kind: Service
 
 metadata:
- name: kibana-service
+ name: kibana
  namespace: elk
 
 spec:
- type: NodePort
+ type: LoadBalancer
  selector: 
-  app: kibana-frontend
+  app: kibana
  ports:
- - port: 5601
+ - port: 80
    targetPort: 5601
-   nodePort: 30001
  
