--- a/logstash.yaml
+++ b/logstash.yaml
@@ -1,14 +1,67 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: logstash-configmap
+  namespace: elk
+data:
+  logstash.yml: |
+    http.host: "0.0.0.0"
+    path.config: /usr/share/logstash/pipeline
+  logstash.conf: |
+    input {
+     file {
+       path => ["/usr/share/logstash/sample.log"]}
+     }
+    filter {
+      if [message] =~ /^\{.*\}$/ {
+        json {
+          source => "message"
+        }
+      }
+      if [ClientHost] {
+        geoip {
+          source => "ClientHost"
+        }
+      }
+    }
+    output {
+        elasticsearch {
+            hosts => [ "elasticsearch:9200" ]
+        }
+    }
+
+---
+apiVersion: v1
 kind: Pod
 metadata:
  name: logstash
  namespace: elk
  labels:
-  app: logstash-backend
+  app: logstash
 spec:
  containers:
- - name: logstash
-   image: docker.elastic.co/logstash/logstash:7.6.0
+ - name: backend
+   image: logstash:6.8.6
+   ports:
+   - containerPort: 5044
+   volumeMounts:
+   - name: config-volume
+     mountPath: /usr/share/logstash/config
+   - name: logstash-pipeline-volume
+     mountPath: /usr/share/logstash/pipeline
+ volumes:
+ - name: config-volume
+   configMap:
+    name: logstash-configmap
+    items:
+    - key: logstash.yml
+      path: logstash.yml
+ - name: logstash-pipeline-volume
+   configMap:
+    name: logstash-configmap
+    items:
+    - key: logstash.conf
+      path: logstash.conf
 
 
 ---
@@ -22,9 +75,8 @@ metadata:
 
 spec:
  selector: 
-  app: logstash-backend
+  app: logstash
  ports:
- - port: 9200 
-   targetPort: 9200
-  
+ - port: 5044 
+   targetPort: 5044
  
