--- a/kibana.yaml
+++ b/kibana.yaml
@@ -1,20 +1,29 @@
-# Kibana frontend app
-apiVersion: v1
-kind: Pod
+# Kibana - layer1
+apiVersion: apps/v1
+kind: Deployment
 metadata:
  name: kibana
  namespace: elk
  labels:
   app: kibana
 spec:
- containers:
- - name: kibana-frontend
-   image: kibana:6.8.6
-   ports:
-   - containerPort: 5601
-     name: ui
-     protocol: TCP
-
+ replicas: 1
+ selector:
+  matchLabels:
+   app: kibana
+ template:
+  metadata:
+   labels:
+    app: kibana
+  spec:
+   serviceAccountName: kibana
+   containers:
+   - name: kibana-frontend
+     image: kibana:6.8.6
+     ports:
+     - containerPort: 5601
+       name: gui
+       protocol: TCP
 
 ---
 # Service
