--- a/logstash.yaml
+++ b/logstash.yaml
@@ -29,39 +29,48 @@ data:
             hosts => [ "elasticsearch:9200" ]
         }
     }
-
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
  name: logstash
  namespace: elk
  labels:
   app: logstash
 spec:
- containers:
- - name: backend
-   image: logstash:6.8.6
-   ports:
-   - containerPort: 5044
-   volumeMounts:
+ replicas: 1
+ selector:
+  matchLabels:
+   app: logstash
+ template:
+  metadata:
+   labels:
+    app: logstash
+  spec:
+   serviceAccountName: logstash
+   containers:
+   - name: backend
+     image: logstash:6.8.6
+     ports:
+     - containerPort: 5044
+     volumeMounts:
+     - name: config-volume
+       mountPath: /usr/share/logstash/config
+     - name: logstash-pipeline-volume
+       mountPath: /usr/share/logstash/pipeline
+   volumes:
    - name: config-volume
-     mountPath: /usr/share/logstash/config
+     configMap:
+      name: logstash-configmap
+      items:
+      - key: logstash.yml
+        path: logstash.yml
    - name: logstash-pipeline-volume
-     mountPath: /usr/share/logstash/pipeline
- volumes:
- - name: config-volume
-   configMap:
-    name: logstash-configmap
-    items:
-    - key: logstash.yml
-      path: logstash.yml
- - name: logstash-pipeline-volume
-   configMap:
-    name: logstash-configmap
-    items:
-    - key: logstash.conf
-      path: logstash.conf
+     configMap:
+      name: logstash-configmap
+      items:
+      - key: logstash.conf
+        path: logstash.conf
 
 
 ---
