--- a/es.yaml
+++ b/es.yaml
@@ -1,39 +1,69 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: StatefulSet
 metadata:
  name: es
  namespace: elk
  labels:
-  app: es-middleware
+  app: es
 spec:
- containers:
- - name: es-middleware
-   image: elasticsearch:6.8.6
-   ports:
-   - containerPort: 9200
-     name: db
-     protocol: TCP
-   - containerPort: 9300
-     name: transport
-     protocol: TCP
-   env:
-   - name: discovery.type
-     value: single-node
-   - name: ELASTICSEARCH_SERVICE_HOST
-     value: 0.0.0.0
-
+ serviceName: elasticsearch
+ replicas: 3
+ updateStrategy:
+  type: RollingUpdate
+ selector:
+  matchLabels:
+   app: es
+ template:
+  metadata:
+   labels:
+    app: es
+  spec:
+   serviceAccountName: es
+   initContainers:
+   - image: alpine:3.6
+     name: es-init
+     command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
+     securityContext:
+      privileged: true
+   containers:
+   - image: elasticsearch:6.8.6
+     name: es
+     ports:
+     - name: backendport
+       containerPort: 9200
+       protocol: TCP
+     - name: transportport
+       containerPort: 9300
+       protocol: TCP
+     volumeMounts:
+     - name: datavolume
+       mountPath: /data
+     env:
+     - name: cluster.name
+       value: "logstore"
+     - name: discovery.zen.ping.unicast.hosts
+       value: "es-0.elasticsearch,es-1.elasticsearch,es-2.elasticsearch"
+     - name: discovery.zen.minimum_master_nodes
+       value: "2"
+     - name: "DISCOVERY_SERVICE"
+       value: "elasticsearch"
+   volumes:
+   - name: datavolume
+     emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
-
 metadata:
   name: elasticsearch
   namespace: elk
-
 spec:
   selector:
-   app: es-middleware
+   app: es
+  clusterIP: None
   ports:
-  - port: 9200
+  - name: gui
+    port: 9200
     targetPort: 9200
- 
+  - name: transport
+    port: 9300
+    targetPort: 9300
