--- a/2.rbac.yaml
+++ b/2.rbac.yaml
@@ -1,3 +1,6 @@
+# Service accoutns, roles and rolebindings for the services
+
+# The roles for ELK services 
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -7,7 +10,6 @@ rules:
 - apiGroups: ["", "extensions", "apps"]
   resources: ["deployments", "replicasets", "pods", "services"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
-
 
 ---
 kind: Role
@@ -40,6 +42,8 @@ metadata:
  labels:
   app: kibana
 
+
+# The service accoutns for ELK services
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -58,6 +62,7 @@ metadata:
  labels:
   app: logstash
 
+# The rolebindings for the ELK services
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -72,6 +77,7 @@ roleRef:
  kind: Role
  name: kibana-role
  apiGroup: ""
+
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
@@ -86,6 +92,7 @@ roleRef:
  kind: Role
  name: es-role
  apiGroup: ""
+
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
